--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <span class="styleLinks">|</span>
       <a class="styleLinks" href="http://lattes.cnpq.br/9802709174564464" target="_blank">LATTES</a>
       <span class="styleLinks">|</span>
-      <a class="styleLinks" href="mailto:golfetokarol@gmail.com">E-MAIL</a>
+      <a class="styleLinks"href="javascript:location='mailto:\u0067\u006f\u006c\u0066\u0065\u0074\u006f\u006b\u0061\u0072\u006f\u006c\u0040\u0067\u006d\u0061\u0069\u006c\u002e\u0063\u006f\u006d';void 0">E-MAIL</a>
       <span class="styleLinks">|</span>
       <a class="styleLinks" href="https://www.instagram.com/karolgolfeto/" target="_blank">INSTAGRAM</a>
     </div>
