Ajustado responsividade geral

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <img src="imagens/karolgolfeto.jpg" alt="foto">
     </div>
 
-    <h1 class="titulo">Oiee, sou a Karol Golfeto</h1>  
+    <h1 class="titulo">Oiee, sou a <br /> Karol Golfeto</h1>  
 
     <div class="apresentacao">
       <p>
