Alteração no texto da página - Adicionado função PO

--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
       </p>
 
       <p>
-        Em 2021 resolvi fazer minha transição de carreira e me encontrei na área de controle de qualidade de software e programação.
+        Em 2021 resolvi fazer minha transição de carreira, comecei trabalhando na área com controle de qualidade de software e programação.       
+      </p>
+      <p>
+        Atualmente me encontrei na área de produtos e hoje atuo como Product Owner. 
       </p>
     </div>
 
