--- a/index.html
+++ b/index.html
@@ -27,14 +27,20 @@
       </p>
 
       <p>
-        Sou uma pessoa muito analítica, detalhista, focada, curiosa, organizada, que gosta de sair dos padrões tradicionais e gosta de desafios!
+        Sou uma profissional movida por desenvolvimento pessoal e desafios e estou sempre buscando sair da zona de conforto!
       </p>
 
       <p>
         Em 2021 resolvi fazer minha transição de carreira, comecei trabalhando na área com controle de qualidade de software e programação.       
       </p>
       <p>
-        Atualmente me encontrei na área de produtos e hoje atuo como Product Owner. 
+        Me encontrei na área de produtos atuando como Product Owner e hoje sou Product Manager.
+      </p>
+      <p>
+        Gosto de trabalhar em projetos que gerem impacto positivo na vida das pessoas, planejando e desenvolvendo soluções que atenda às necessidades dos clientes. 
+      </p>
+      <p>
+         Acredito que a colaboração e o diálogo aberto entre as diversas áreas da empresa são fundamentais para o sucesso na construção de um produto ou serviço. Além disso, sou data driven e gosto de estar sempre atento às tendências do mercado, às novidades tecnológicas e aos insight dos usuários para identificar oportunidades de inovação e criar soluções que agreguem valor ao negócio. 
       </p>
     </div>
 
